[package]
name = "egui-ash-test"
version = "0.1.0"
edition = "2021"
description = "egui-ash-test"

[dependencies]
anyhow = "1.0.53"
ash = { version="0.37.3", default-features = false }
ash-molten = { version = "0.17", features = ["pre-built"]}
ash-window = "0.12.0"
egui = "0.25.0"
egui-ash = { version = "0.4", features = ["gpu-allocator"] }
glam = "0.25.0"
gpu-allocator = { version = "0.25.0", default-features = false, features = ["vulkan"] }
raw-window-handle = { version="0.5.0" }
tobj = "4.0.0"

#[patch.crates-io]
#ash-molten = { path = "../ash-molten" }
#egui-ash = { path = "../egui-ash" }

